--- a/TestCase10_Scheme Configurator.xaml
+++ b/TestCase10_Scheme Configurator.xaml
@@ -368,7 +368,6 @@
       <AssemblyReference>UiPath.UIAutomationNext.Activities</AssemblyReference>
       <AssemblyReference>UiPath.Platform</AssemblyReference>
       <AssemblyReference>UiPath.Studio.Constants</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <sap:WorkflowViewStateService.ViewState>
@@ -510,9 +509,9 @@
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
         <x:Boolean x:Key="IsPinned">False</x:Boolean>
-        <av:Point x:Key="ShapeLocation">420,2.5</av:Point>
+        <av:Point x:Key="ShapeLocation">400,0</av:Point>
         <av:Size x:Key="ShapeSize">60,75</av:Size>
-        <av:PointCollection x:Key="ConnectorLocation">450,77.5 450,97.7</av:PointCollection>
+        <av:PointCollection x:Key="ConnectorLocation">430,75 430,97.7</av:PointCollection>
         <x:Double x:Key="Width">980</x:Double>
         <x:Double x:Key="Height">1556.5</x:Double>
       </scg:Dictionary>
@@ -523,9 +522,9 @@
     <FlowStep x:Name="__ReferenceID17">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <av:Point x:Key="ShapeLocation">350,97.7</av:Point>
+          <av:Point x:Key="ShapeLocation">330,97.7</av:Point>
           <av:Size x:Key="ShapeSize">200,103</av:Size>
-          <av:PointCollection x:Key="ConnectorLocation">450,200.7 448.641666666667,200.7 448.641666666667,230.5</av:PointCollection>
+          <av:PointCollection x:Key="ConnectorLocation">430,200.7 430,230.7 428.641666666667,230.7 428.641666666667,240.5</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <TryCatch sap2010:Annotation.AnnotationText="In this sequence we add the data tables" DisplayName="...Given(Scheme Configuration)" sap:VirtualizedContainerService.HintSize="200,103" sap2010:WorkflowViewState.IdRef="TryCatch_9">
@@ -794,21 +793,21 @@
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-              <av:Point x:Key="ShapeLocation">380.641666666667,230.5</av:Point>
+              <av:Point x:Key="ShapeLocation">360.641666666667,240.5</av:Point>
               <av:Size x:Key="ShapeSize">136,87</av:Size>
-              <av:PointCollection x:Key="FalseConnector">516.641666666667,274 650,274 650,304.02</av:PointCollection>
-              <av:PointCollection x:Key="TrueConnector">380.641666666667,274 350.641666666667,274 350.641666666667,278.62 300,278.62</av:PointCollection>
+              <av:PointCollection x:Key="FalseConnector">496.641666666667,284 650,284 650,304.02</av:PointCollection>
+              <av:PointCollection x:Key="TrueConnector">360.641666666667,284 330.641666666667,284 330.641666666667,288.62 270,288.62</av:PointCollection>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
           <FlowDecision.True>
             <FlowStep x:Name="__ReferenceID0">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                  <av:Point x:Key="ShapeLocation">70,243.12</av:Point>
+                  <av:Point x:Key="ShapeLocation">40,253.12</av:Point>
                   <av:Size x:Key="ShapeSize">230,71</av:Size>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <WriteLine DisplayName="When error in any workflow" sap:VirtualizedContainerService.HintSize="230,71" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="Stop">
+              <WriteLine DisplayName="Scheme Config Stop" sap:VirtualizedContainerService.HintSize="230,71" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="Stop">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -826,7 +825,7 @@
                   <av:PointCollection x:Key="ConnectorLocation">550,363.02 429,363.02 429,396.5</av:PointCollection>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <TryCatch sap2010:Annotation.AnnotationText="This workflow executes Module A10_1_Scheme Details" DisplayName="...When (Scheme Details)" sap:VirtualizedContainerService.HintSize="480,946" sap2010:WorkflowViewState.IdRef="TryCatch_10">
+              <TryCatch sap2010:Annotation.AnnotationText="This workflow executes Module A10_1_Scheme Details" DisplayName="...When (Scheme Details)" sap:VirtualizedContainerService.HintSize="200,118" sap2010:WorkflowViewState.IdRef="TryCatch_10">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
@@ -957,12 +956,8 @@
                     </Sequence>
                     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Invoke Log File Execution Ended Scheme Details" sap:VirtualizedContainerService.HintSize="400,122" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_68" UnSafe="False" WorkflowFileName="Framework Files\Log File.xaml">
                       <ui:InvokeWorkflowFile.Arguments>
-                        <InArgument x:TypeArguments="x:String" x:Key="in_LogMessage">
-                          <Literal x:TypeArguments="x:String">Execution Ended For Scheme Detail...</Literal>
-                        </InArgument>
-                        <InArgument x:TypeArguments="x:String" x:Key="in_LogLevel">
-                          <Literal x:TypeArguments="x:String">Info</Literal>
-                        </InArgument>
+                        <InArgument x:TypeArguments="x:String" x:Key="in_LogMessage">Execution Ended For Scheme Detail...</InArgument>
+                        <InArgument x:TypeArguments="x:String" x:Key="in_LogLevel">Info</InArgument>
                       </ui:InvokeWorkflowFile.Arguments>
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -994,12 +989,8 @@
                         </sap:WorkflowViewStateService.ViewState>
                         <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Invoke Log File Error In Scheme Details" sap:VirtualizedContainerService.HintSize="358,122" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_42" UnSafe="False" WorkflowFileName="Framework Files\Log File.xaml">
                           <ui:InvokeWorkflowFile.Arguments>
-                            <InArgument x:TypeArguments="x:String" x:Key="in_LogMessage">
-                              <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="&quot;Error In Scheme Details : &quot;+exception.Message" />
-                            </InArgument>
-                            <InArgument x:TypeArguments="x:String" x:Key="in_LogLevel">
-                              <Literal x:TypeArguments="x:String">Error</Literal>
-                            </InArgument>
+                            <InArgument x:TypeArguments="x:String" x:Key="in_LogMessage">["Error In Scheme Details : "+exception.Message]</InArgument>
+                            <InArgument x:TypeArguments="x:String" x:Key="in_LogLevel">Error</InArgument>
                           </ui:InvokeWorkflowFile.Arguments>
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -1033,7 +1024,7 @@
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                       <av:Point x:Key="ShapeLocation">365.5,396.5</av:Point>
                       <av:Size x:Key="ShapeSize">127,87</av:Size>
-                      <av:PointCollection x:Key="TrueConnector">365.5,440 185,440 185,314.12</av:PointCollection>
+                      <av:PointCollection x:Key="TrueConnector">365.5,440 155,440 155,324.12</av:PointCollection>
                       <av:PointCollection x:Key="FalseConnector">492.5,440 650,440 650,464.5</av:PointCollection>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
@@ -1214,7 +1205,7 @@
                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                               <av:Point x:Key="ShapeLocation">360.5,556.5</av:Point>
                               <av:Size x:Key="ShapeSize">139,87</av:Size>
-                              <av:PointCollection x:Key="TrueConnector">360.5,600 185,600 185,314.12</av:PointCollection>
+                              <av:PointCollection x:Key="TrueConnector">360.5,600 155,600 155,324.12</av:PointCollection>
                               <av:PointCollection x:Key="FalseConnector">499.5,600 650,600 650,624.5</av:PointCollection>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
@@ -1386,7 +1377,7 @@
                                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                       <av:Point x:Key="ShapeLocation">380.5,716.5</av:Point>
                                       <av:Size x:Key="ShapeSize">98,87</av:Size>
-                                      <av:PointCollection x:Key="TrueConnector">380.5,760 185,760 185,314.12</av:PointCollection>
+                                      <av:PointCollection x:Key="TrueConnector">380.5,760 155,760 155,324.12</av:PointCollection>
                                       <av:PointCollection x:Key="FalseConnector">478.5,760 654.641666666667,760 654.641666666667,781.52</av:PointCollection>
                                     </scg:Dictionary>
                                   </sap:WorkflowViewStateService.ViewState>
@@ -1530,7 +1521,7 @@
                                               <av:Point x:Key="ShapeLocation">380.4,866.4</av:Point>
                                               <av:Size x:Key="ShapeSize">103,87</av:Size>
                                               <av:PointCollection x:Key="FalseConnector">483.4,909.9 660,909.9 660,933.6</av:PointCollection>
-                                              <av:PointCollection x:Key="TrueConnector">380.4,909.9 185,909.9 185,314.12</av:PointCollection>
+                                              <av:PointCollection x:Key="TrueConnector">380.4,909.9 155,909.9 155,324.12</av:PointCollection>
                                             </scg:Dictionary>
                                           </sap:WorkflowViewStateService.ViewState>
                                           <FlowDecision.False>
@@ -1707,7 +1698,7 @@
                                                       <av:Point x:Key="ShapeLocation">380.8,1026.4</av:Point>
                                                       <av:Size x:Key="ShapeSize">111,87</av:Size>
                                                       <av:PointCollection x:Key="FalseConnector">491.8,1069.9 660,1069.9 660,1094.5</av:PointCollection>
-                                                      <av:PointCollection x:Key="TrueConnector">380.8,1069.9 185,1069.9 185,314.12</av:PointCollection>
+                                                      <av:PointCollection x:Key="TrueConnector">380.8,1069.9 155,1069.9 155,324.12</av:PointCollection>
                                                     </scg:Dictionary>
                                                   </sap:WorkflowViewStateService.ViewState>
                                                   <FlowDecision.False>
@@ -1876,7 +1867,7 @@
                                                               <av:Point x:Key="ShapeLocation">370.5,1186.5</av:Point>
                                                               <av:Size x:Key="ShapeSize">138,87</av:Size>
                                                               <av:PointCollection x:Key="FalseConnector">508.5,1230 660,1230 660,1274.5</av:PointCollection>
-                                                              <av:PointCollection x:Key="TrueConnector">370.5,1230 185,1230 185,314.12</av:PointCollection>
+                                                              <av:PointCollection x:Key="TrueConnector">370.5,1230 155,1230 155,324.12</av:PointCollection>
                                                             </scg:Dictionary>
                                                           </sap:WorkflowViewStateService.ViewState>
                                                           <FlowDecision.False>
@@ -2027,7 +2018,7 @@
                                                                       <av:Point x:Key="ShapeLocation">380.641666666667,1366.5</av:Point>
                                                                       <av:Size x:Key="ShapeSize">112,87</av:Size>
                                                                       <av:PointCollection x:Key="FalseConnector">492.641666666667,1410 660,1410 660,1435.5</av:PointCollection>
-                                                                      <av:PointCollection x:Key="TrueConnector">380.641666666667,1410 185,1410 185,314.12</av:PointCollection>
+                                                                      <av:PointCollection x:Key="TrueConnector">380.641666666667,1410 155,1410 155,324.12</av:PointCollection>
                                                                     </scg:Dictionary>
                                                                   </sap:WorkflowViewStateService.ViewState>
                                                                   <FlowDecision.False>
